# vrdb-cpp

./: ..gitignore.swp  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  cmake_install.cmake  main.cpp
lib/tdx-lib/: includes.hpp
lib/tdx-lib/lib/: tdx_serde.hpp
lib/tdx-lib/models/: string_encoding.hpp  tdx_document.hpp  tdx_value.hpp  tdx_values.hpp  tdx_vector.hpp
models/as_engine/query/: class_partial_declarations.hpp  query_filter.cpp  query_filter.hpp
tests/: tests.cpp
